--- a/app/src/main/res/layout/activity_addnew.xml
+++ b/app/src/main/res/layout/activity_addnew.xml
@@ -65,8 +65,9 @@
         android:id="@+id/noResult"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/divider"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="280dp"
+        android:layout_marginTop="20dp"
         android:textSize="14sp"
         android:textColor="@color/text_gray1"
         android:visibility="gone"
