--- a/app/src/main/res/layout/activity_search_group.xml
+++ b/app/src/main/res/layout/activity_search_group.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -53,12 +53,26 @@
     </LinearLayout>
     <View
         android:id="@+id/titleLine"
+        android:layout_below="@id/title"
         android:layout_width="match_parent"
         android:layout_height="1px"
         android:background="@color/line" />
 
     <ListView
         android:id="@+id/list"
+        android:layout_below="@id/titleLine"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
-</LinearLayout>
+
+    <TextView
+        android:id="@+id/noResult"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/titleLine"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:textSize="14sp"
+        android:textColor="@color/text_gray1"
+        android:visibility="gone"
+        android:text="@string/search_no_result"/>
+</RelativeLayout>
